# virt-v2v

./: .gitignore  .gitmodules  Build.PL  MANIFEST  MANIFEST.SKIP  Makefile.am  TODO  TODO.txt  autobuild.sh  autogen.sh  configure.ac  metadata-format.txt  rubygem-virt-p2v.spec.PL  run  virt-p2v.spec.PL  virt-v2v.spec.PL
.tx/: config
augeas/: README  README.txt  xorg.aug
lib/Sys/: VirtConvert.pm  VirtV2V.pm
lib/Sys/VirtConvert/: Config.pm  Converter.pm  ExecHelper.pm  GuestfsHandle.pm  Util.pm
lib/Sys/VirtConvert/Connection/: LibVirt.pm  LibVirtSource.pm  LibVirtTarget.pm  LibVirtXMLSource.pm  RHEVTarget.pm  Source.pm  VMWareOVASource.pm  Volume.pm
lib/Sys/VirtConvert/Converter/: RedHat.pm  Windows.pm
lib/Sys/VirtConvert/Transfer/: ESX.pm  Local.pm  SSH.pm
lib/Sys/VirtV2V/: Config.pm  Connection.pm  Converter.pm  ExecHelper.pm  GuestOS.pm  GuestfsHandle.pm  HVSource.pm  HVTarget.pm  MetadataReader.pm  SparseWriter.pm  UserMessage.pm  Util.pm
lib/Sys/VirtV2V/Connection/: LibVirt.pm  LibVirtSource.pm  LibVirtTarget.pm  LibVirtXML.pm  LibVirtXMLSource.pm  RHEVTarget.pm  Source.pm  Volume.pm
lib/Sys/VirtV2V/Converter/: Linux.pm  RedHat.pm  Windows.pm
lib/Sys/VirtV2V/GuestOS/: RedHat.pm
lib/Sys/VirtV2V/HVSource/Xen/: Linux.pm
lib/Sys/VirtV2V/HVTarget/: Linux.pm
lib/Sys/VirtV2V/MetadataReader/: LibVirt.pm  LibVirtXML.pm
lib/Sys/VirtV2V/Transfer/: ESX.pm  Local.pm  LocalCopy.pm  SSH.pm
p2v-client/: .gitignore  Manifest  Rakefile
p2v-client/lib/virt-p2v/: blockdevice.rb  connection.rb  converter.rb  gtk-queue.rb
p2v-client/lib/virt-p2v/ui/: connect.rb  convert.rb  main.rb  network.rb
p2v-image-builder/: Makefile  common-manifest-post.ks  common-pkgs.ks  common-post-nochroot.ks  common-post.ks
p2v-server/: virt-p2v-server.pl
p2v/client/: .gitignore  Manifest  Rakefile  virt-p2v.gemspec
p2v/client/ext/rblibssh2/: README.txt  extconf.rb  rblibssh2.c  rblibssh2.h  rblibssh2_channel.c  rblibssh2_session.c
p2v/client/lib/virt-p2v/: blockdevice.rb  connection.rb  converter.rb  gtk-queue.rb  netdevice.rb
p2v/client/lib/virt-p2v/ui/: connect.rb  convert.rb  main.rb  network.rb  p2v.ui  success.rb
p2v/image-builder/: .gitignore  Makefile  common-minimizer.ks  common-pkgs.ks  common-post-nochroot.ks  common-post.ks  p2v-post.ks  virt-p2v-image-builder  virt-p2v-image.ks
p2v/server/: run-p2v-locally  virt-p2v-server.pl
perl/: Makefile.PL  Makefile.PL.in  Makefile.am
perl/lib/Sys/: VirtV2V.pm.in
perl/lib/Sys/Guestfs/: GuestOS.pm  HVSource.pm  HVTarget.pm  MetadataReader.pm  Storage.pm
perl/lib/Sys/Guestfs/GuestOS/: RedHat.pm
perl/lib/Sys/Guestfs/HVSource/Xen/: Linux.pm
perl/lib/Sys/Guestfs/HVTarget/: Linux.pm
perl/lib/Sys/Guestfs/MetadataReader/: LibVirtXML.pm
perl/lib/Sys/Guestfs/Storage/: QCOW2.pm
perl/lib/Sys/VirtV2V/: GuestOS.pm  HVSource.pm  HVTarget.pm  MetadataReader.pm  Storage.pm
perl/lib/Sys/VirtV2V/GuestOS/: RedHat.pm
perl/lib/Sys/VirtV2V/HVSource/Xen/: Linux.pm
perl/lib/Sys/VirtV2V/HVTarget/: Linux.pm
perl/lib/Sys/VirtV2V/MetadataReader/: LibVirt.pm  LibVirtXML.pm
perl/lib/Sys/VirtV2V/Storage/: QCOW2.pm
po/: Makefile  PACKAGE  POTFILES.in  es.po  es_ES.po  fr.po  it.po  nl.po  or.po  pl.po  pt_BR.po  ru.po  te.po  uk.po  virt-v2v.pot  zh_CN.po  zh_TW.po
snapshot/: Makefile.am  run-snapshot-locally  v2v-snapshot.pl  virt-snapshot.pl  virt-snapshot.pl.in
t/: 001-pod.t  002-pod-coverage.t  003-syntax.t  004-ExecHelper.t
v2v/: Makefile.am  STATUS  run-v2v-locally  virt-v2v.conf  virt-v2v.conf.pod  virt-v2v.db  virt-v2v.pl  virt-v2v.pl.in
windows/: README.txt  firstboot.bat
